; ModuleID = '/home/carl/AnghaBench/i3/src/extr_randr.c_get_output_next_wrap.c'
source_filename = "/home/carl/AnghaBench/i3/src/extr_randr.c_get_output_next_wrap.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@CLOSEST_OUTPUT = common dso_local global i32 0, align 4
@D_RIGHT = common dso_local global i64 0, align 8
@D_LEFT = common dso_local global i64 0, align 8
@D_DOWN = common dso_local global i64 0, align 8
@D_UP = common dso_local global i64 0, align 8
@FARTHEST_OUTPUT = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [25 x i8] c"current = %s, best = %s\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @get_output_next_wrap(i64 %0, i32* %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i64, align 8
  store i64 %0, i64* %3, align 8
  store i32* %1, i32** %4, align 8
  %7 = load i64, i64* %3, align 8
  %8 = load i32*, i32** %4, align 8
  %9 = load i32, i32* @CLOSEST_OUTPUT, align 4
  %10 = call i32* @get_output_next(i64 %7, i32* %8, i32 %9)
  store i32* %10, i32** %5, align 8
  %11 = load i32*, i32** %5, align 8
  %12 = icmp ne i32* %11, null
  br i1 %12, label %40, label %13

13:                                               ; preds = %2
  %14 = load i64, i64* %3, align 8
  %15 = load i64, i64* @D_RIGHT, align 8
  %16 = icmp eq i64 %14, %15
  br i1 %16, label %17, label %19

17:                                               ; preds = %13
  %18 = load i64, i64* @D_LEFT, align 8
  store i64 %18, i64* %6, align 8
  br label %35

19:                                               ; preds = %13
  %20 = load i64, i64* %3, align 8
  %21 = load i64, i64* @D_LEFT, align 8
  %22 = icmp eq i64 %20, %21
  br i1 %22, label %23, label %25

23:                                               ; preds = %19
  %24 = load i64, i64* @D_RIGHT, align 8
  store i64 %24, i64* %6, align 8
  br label %34

25:                                               ; preds = %19
  %26 = load i64, i64* %3, align 8
  %27 = load i64, i64* @D_DOWN, align 8
  %28 = icmp eq i64 %26, %27
  br i1 %28, label %29, label %31

29:                                               ; preds = %25
  %30 = load i64, i64* @D_UP, align 8
  store i64 %30, i64* %6, align 8
  br label %33

31:                                               ; preds = %25
  %32 = load i64, i64* @D_DOWN, align 8
  store i64 %32, i64* %6, align 8
  br label %33

33:                                               ; preds = %31, %29
  br label %34

34:                                               ; preds = %33, %23
  br label %35

35:                                               ; preds = %34, %17
  %36 = load i64, i64* %6, align 8
  %37 = load i32*, i32** %4, align 8
  %38 = load i32, i32* @FARTHEST_OUTPUT, align 4
  %39 = call i32* @get_output_next(i64 %36, i32* %37, i32 %38)
  store i32* %39, i32** %5, align 8
  br label %40

40:                                               ; preds = %35, %2
  %41 = load i32*, i32** %5, align 8
  %42 = icmp ne i32* %41, null
  br i1 %42, label %45, label %43

43:                                               ; preds = %40
  %44 = load i32*, i32** %4, align 8
  store i32* %44, i32** %5, align 8
  br label %45

45:                                               ; preds = %43, %40
  %46 = load i32*, i32** %4, align 8
  %47 = call i32 @output_primary_name(i32* %46)
  %48 = load i32*, i32** %5, align 8
  %49 = call i32 @output_primary_name(i32* %48)
  %50 = call i32 @DLOG(i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str, i64 0, i64 0), i32 %47, i32 %49)
  %51 = load i32*, i32** %5, align 8
  ret i32* %51
}

declare dso_local i32* @get_output_next(i64, i32*, i32) #1

declare dso_local i32 @DLOG(i8*, i32, i32) #1

declare dso_local i32 @output_primary_name(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
